# cnptes_lab0

./: CMakeLists.txt  net  net_1
lab/inc/: client.h  server.h
lab/src/: client.c  server.c
lib/inc/: server_f.h
